# funclip_asr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HANDOFF-REVIEW.md  HANDOFF.md  LICENSE  README.md  README_PERF.md  README_PERF_OPTIMIZED.md  README_REFACTORING.md  ali_der_eval.py  ali_near_prep.py  app_control.py  app_live_local.py  app_live_ws.py  asr_onnx_service.py  asr_service.py  benchmark_qwen_asr.py  cer_eval.py  cer_eval_parallel.py  cli_transcribe.py  config.json.example  config.yaml  der_eval.py  dify_openapi.yaml  extract_aishell1_test.py  pyproject.toml  requirements.txt  run_ali_der_full.py  run_bench.bat  run_cer_test.ps1  segmentation_engine.py  sherpa_engine.py  speaker_engine.py  start_live_engine.bat  start_qwen_backend.bat  stop_qwen_backend.bat  torch_engine.py  (+3 more)
.handoffs/: HANDOFF.md
docs/: REFACTORING_REPORT_P3.md  REVIEW-sliding-diarization.md  TEST_REPORT.md  dify_openapi.yaml  requirements.txt
eval/: ali_der_eval.py  ali_near_prep.py  cer_eval.py  cer_eval_parallel.py  der_eval.py  extract_aishell1_test.py  run_ali_der_full.py  run_cer_test.ps1
funclip/: asr.py  asr1 copy.py  asr1.py  asr_engine.py  qwen_client.py  super_asr_engine.py  videoclipper - 副本.py  videoclipper.py
qwen_server/: custom_server.py  custom_server.py.bak
scripts/: qc_extract_deps.py
test_results/: cer_full.jsonl  cer_sample_1k.jsonl  cer_sample_1k_p1.jsonl  cer_sample_1k_p1_summary.json  cer_sample_1k_summary.json  der_ali_baseline.json  der_ali_seg_clustering.json  der_before.json  der_full_seg_clustering.json  der_p1_after.json  der_single.json  der_single_seg_clustering.json  der_single_v2.json  der_spectral.json
tests/: README.md  bench_sherpa_vs_pytorch.py  conftest.py  mocks.py  test_affinity.py  test_app_control_env.py  test_asr_api.py  test_batch_decode.py  test_extract_feat.py  test_offline_pipeline_integration.py  test_offline_pipeline_unit.py  test_onnx_gpu.py  test_onnx_performance.py  test_onnx_service_integration.py  test_openvino_speed.py  test_pytorch_affinity.py  test_pytorch_inference_refactor.py  test_pytorch_punc_load.py  test_pytorch_route.py  test_pytorch_service_integration.py  test_routing.py  test_seg_clustering.py  (+9 more)
(+132 files in other folders)
