[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funclip-pro"
version = "0.1.0"
description = "ASR + Speaker Diarization system with OfflinePipeline"
requires-python = ">=3.10"
dependencies = [
    "librosa",
    "soundfile",
    "scikit-learn>=1.3.2",
    "funasr>=1.1.2",
    "moviepy==1.0.3",
    "numpy==1.26.4",
    "gradio",
    "modelscope",
    "torch>=1.13",                    # CUDA 12.1 (cu121)
    "torchaudio",
    "openai",
    "g4f",
    "dashscope",
    "curl_cffi",
    "funasr-onnx",
    "onnxruntime-gpu[cuda,cudnn]",
    "fastapi",
    "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
