[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funclip-pro"
version = "0.9.0"
description = "边缘设备极致对齐的 ASR & 说话人分离系统"
authors = [{name = "FunClip Pro Contributors"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa",
    "soundfile",
    "scikit-learn>=1.3.2",
    "funasr>=1.1.2",
    "numpy==1.26.4",
    "gradio",
    "torch>=1.13",
    "torchaudio",
    "onnxruntime-gpu[cuda,cudnn]",
    "fastapi",
    "uvicorn",
    "websockets",
    "requests",
    "pyaudio",
    "pyaudiowpatch; sys_platform == 'win32'",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "slow: 需要加载真实 ML 模型（ASR/VAD/说话人识别）或外部服务，运行较慢",
]
addopts = "-m 'not slow' -q --tb=short --ignore=tests/archive"

[tool.ruff]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
per-file-ignores = {"tests/**" = ["E402"]}
ignore = [
    "E402",  # Import not at top — by design (DLL patch before imports)
]

[project.urls]
Homepage = "https://github.com/songxitao/funclip_asr"
Repository = "https://github.com/songxitao/funclip_asr"
Documentation = "https://github.com/songxitao/funclip_asr#readme"

[project.scripts]
funclip-pro = "funclip_pro.cli:main"
